--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta http-equiv="content-type" content="text/html;
-        charset=utf-8" />
-        <title>{{ page.title }}</title>
-    </head>
-    <body>
-        {{ content }}  
-    </body>
+  <head>
+    <meta http-equiv="content-type" content="text/html;
+    charset=utf-8" />
+    <title>{{ page.title }}</title>
+  </head>
+
+  <body>
+  	
+  	{% include header.html %}
+
+  	<div id="main" class="container main">
+  		{{ content }}
+  	</div>
+      
+    <div id="top" data-toggle="tooltip" data-placement="left" title="back to top">
+  		<a href="javascript:;">
+   			<div class="arrow"></div>
+    		<div class="stick"></div>
+    		</a>
+  	</div>
+
+	</body>
 </html>
