--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,16 +1,27 @@
+<!-- default模板：开始 -->
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="content-type" content="text/html;
-    charset=utf-8" />
-    <title>{{ page.title }}</title>
-  </head>
+<!-- default模板：head块是由include head.html命令添加的 -->
+  {% include head.html %}
+<!-- default模板：head块结束 -->
+<!-- default模板：<body data-spy="scroll" data-target="#myAffix"> -->
 
   <body>
-  
-  	<div id="main" class="container main">
-  		{{ content }}
-  	</div>
 
-	</body>
+<!-- default模板：header块是由include header.html命令添加的 -->
+    {% include header.html %}
+<!-- default模板：header块结束 -->
+
+<!-- default模板：content块是由content命令添加的 -->
+    <div id="main" class="container main">
+      {{ content }}
+    </div>
+<!-- default模板：content块结束 -->
+
+<!-- default模板：footer块是由include footer.html命令添加的 -->
+    {% include footer.html %}
+<!-- default模板：footer块结束 -->
+
+  </body>
+<!-- default模板：结束 -->
 </html>
