improve layouts style and condense css files

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 <!-- default模板：header块结束 -->
 
 <!-- default模板：content块是由content命令添加的 -->
-    <div id="main" class="container main">
+    <div class="main">
       {{ content }}
     </div>
 <!-- default模板：content块结束 -->
