--- a/static/css/basic.css
+++ b/static/css/basic.css
@@ -105,7 +105,7 @@ p {
 }
 
 .main {
-	width: 95%;
+	width: 75%;
 	margin: 4% auto; 
 }
 /* post
@@ -125,6 +125,7 @@ p {
 article {
   line-height: 1.5em;
   color: #223;
+  overflow: auto;
 }
 
 #index .col-sm-9 {
