--- a/static/css/basic.css
+++ b/static/css/basic.css
@@ -68,6 +68,24 @@ h3 {
   margin-top: 1em;
 }
 
+table {
+  margin: 1em 1em;
+  text-align: center;
+  vertical-align: middle;
+}
+
+th {
+  background: #999;
+}
+
+table, th, td {
+  border: 1px solid #000;
+}
+
+th, td {
+  padding: .5em 2em .5em 2em;
+}
+
 a {
   font-weight: bold;
   text-decoration: none;
