--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,8 +13,14 @@
 
     {{ content }}
 
-    {% include footer.html %}
+	<div id="top" data-toggle="tooltip" data-placement="left" title="回到顶部">
+      <a href="javascript:;">
+        <div class="arrow"></div>
+        <div class="stick"></div>
+      </a>
+    </div>
 
+    {% include footer.html %}
 
 <!-- Image to hack wechat -->
 <img src="/img/icon_wechat.png" width="0" height="0" />
