add catalog to post and make catalog javascript program more readable

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -220,15 +220,15 @@
 {% if page.catalog %}
 <script type="text/javascript">
     function generateCatalog (selector) {
-        var P = $('div.post-container'),a,n,t,l,i,c;
-        a = P.find('h1,h2,h3,h4,h5,h6');
-        a.each(function () {
-            n = $(this).prop('tagName').toLowerCase();
-            i = "#"+$(this).prop('id');
-            t = $(this).text();
-            c = $('<a href="'+i+'" rel="nofollow">'+t+'</a>');
-            l = $('<li class="'+n+'_nav"></li>').append(c);
-            $(selector).append(l);
+        var post = $('div.post-container'),h,tagName,text,li,id,link;
+        h = post.find('h1,h2,h3,h4,h5,h6');
+        h.each(function () {
+            tagName = $(this).prop('tagName').toLowerCase();
+            id = "#"+$(this).prop('id');
+            text = $(this).text();
+            link = $('<a href="'+id+'" rel="nofollow">'+text+'</a>');
+            li = $('<li class="'+tagName+'_nav"></li>').append(link);
+            $(selector).append(li);
         });
         return true;    
     }
