add duoshuo comment module

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -222,6 +222,13 @@
     function generateCatalog (selector) {
         var post = $('div.post-container'),h,tagName,text,li,id,link;
         h = post.find('h1,h2,h3,h4,h5,h6');
+        /*
+        **  how to auto hide catalog if no headline in article?   
+        */
+        if (!h) {
+            {{page.catalog}} = false;
+            return false;
+        }
         h.each(function () {
             tagName = $(this).prop('tagName').toLowerCase();
             id = "#"+$(this).prop('id');
