--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -110,14 +110,12 @@ layout: default
 
                 {% if site.duoshuo_username %}
                 <!-- 多说评论框 start -->
-                <div class="comment">
-                    <div class="ds-thread"
-                        data-thread-key="{{page.id}}"
-                        data-title="{{page.title}}"
-                        data-url="{{site.url}}{{site.baseurl}}{{page.url}}" >
+                    <div class="ds-thread" 
+                        data-thread-key="{{page.id}}" 
+                        data-title="{{page.title}}" 
+                        data-url="{{site.url}}{{site.baseurl}}{{page.url}}">
                     </div>
-                </div>
-                <!-- 多说评论框 end -->
+                <!-- 多说评论框 end -->                
                 {% endif %}
 
                 {% if site.disqus_username %}
@@ -187,22 +185,19 @@ layout: default
 
 
 {% if site.duoshuo_username %}
+
 <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
 <script type="text/javascript">
-    // dynamic User by Hux
-    var _user = '{{site.duoshuo_username}}';
-
-    // duoshuo comment query.
-    var duoshuoQuery = {short_name: _user };
+    var duoshuoQuery = {short_name:"timotokki"};
     (function() {
         var ds = document.createElement('script');
         ds.type = 'text/javascript';ds.async = true;
         ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
         ds.charset = 'UTF-8';
-        (document.getElementsByTagName('head')[0]
+        (document.getElementsByTagName('head')[0] 
          || document.getElementsByTagName('body')[0]).appendChild(ds);
     })();
-</script>
+    </script>
 <!-- 多说公共JS代码 end -->
 {% endif %}
 
