replace of my own css and update a post

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="{{ "/css/bootstrap.min.css" | prepend: site.baseurl }}">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="{{ "/css/hux-blog.min.css" | prepend: site.baseurl }}">
+    <!-- <link rel="stylesheet" href="{{ "/css/hux-blog.min.css" | prepend: site.baseurl }}"> -->
     <link rel="stylesheet" href="{{ "/css/timo-blog.css" | prepend: site.baseurl }}">
 
     <!-- Pygments Github CSS -->
